# cpp-course-hometasks

lab1/: 02_02.cc  02_03.cc  02_06.cc  02_07.cc  02_08.cc  CMakeLists.txt
lab2/02-09/: 02-09.cpp  CMakeLists.txt
lab2/02-10/: 02-10.cpp  CMakeLists.txt
lab2/03-01/: 03-01.cpp  CMakeLists.txt
lab2/03-02/: CMakeLists.txt
lab2/03-03/: 03-03.cpp  CMakeLists.txt
lab2/03-04/: CMakeLists.txt
lab2/03-05/: CMakeLists.txt
lab2/03-06/: CMakeLists.txt
lab2/03-07/: 03-07.cpp  CMakeLists.txt
lab2/03-09/: CMakeLists.txt
lab2/03-10/: CMakeLists.txt
lab3/04-01/: 04-01.cpp  CMakeLists.txt
lab3/04-02/: 04-02.cpp  CMakeLists.txt
lab3/04-03/: 04-03.cpp  CMakeLists.txt
lab3/04-04/: 04-04.cpp  CMakeLists.txt
lab3/04-05/: 04-05.cpp  CMakeLists.txt
lab3/04-06/: 04-06.cpp  CMakeLists.txt
lab3/04-07/: 04-07.cpp  CMakeLists.txt
lab3/04-08/: 04-08.cpp  CMakeLists.txt
lab3/04-09/: 04-09.cpp  CMakeLists.txt
lab3/04-10/: 04-10.cpp  CMakeLists.txt
lab3/05-01/: 05-01.cpp  CMakeLists.txt
lab3/05-02/: 05-02.cpp  CMakeLists.txt
lab3/05-03/: 05-03.cpp  CMakeLists.txt
lab3/06-01/: CMakeLists.txt  main.cpp  rational.cpp  rational.hpp
lab3/06-02/: README.md  main.cpp
lab3/06-03/: CMakeLists.txt  README.md  rational.cpp  rational.cppm
lab4/05-05/: task.cpp
lab4/06-04/: README.md
lab4/06-05/: CMakeLists.txt  main.cpp  v1.cpp  v2.cpp
lab4/07-01/: task.cpp
lab4/07-02/: CMakeLists.txt  task.cpp
lab4/07-04/: CMakeLists.txt
lab4/07-05/: CMakeLists.txt  task.cpp
lab4/08-01/: CMakeLists.txt  task.cpp
lab4/08-02/: task.cpp
lab4/08-03/: task.cpp
lab4/08-04/: CMakeLists.txt
lab4/08-05/: task.cpp
